# gravitas-sandbox-engine

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
demo/: test_system.json
src/config/: constants.py  models.py  schemas.py
src/config/constants/: __init__.py  physics_constants.py  style_constants.py  ui_constants.py  visual_constants.py
src/core/: engine.py  load_json.py  planets_validator.py  simulation.py
src/gui/: add_planet.py  control_panel.py  main_window.py  models.py  pause_menu.py  planet_dialog.py  planet_item.py  planets_manager.py  scene.py  space.py  start_screen.py  views.py
tests/: conftest.py  test_physics.py  test_schemas.py  test_simulation.py
