[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gravitas-sandbox-engine"
version = "0.1.0"
description = "N-Body Orbital Dynamics Sandbox"
authors = [
    { name = "Miron Klimov" }
]
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C90",
    "N",
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = [
    "tests",
]
pythonpath = [
    "src"
]
